--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,9 @@
   /* object-fit: contain; */
 }
 @media (min-width: 1200px){
-.box-counter {
+/* .box-counter {
     width: 20%;
-}
+} */
 }
 .modal-backdrop {
   position: fixed;
@@ -113,7 +113,7 @@
   margin-left: 2px;
 }
 
-.fa-facebook-square:before {
+/* .fa-facebook-square:before {
   color: blue;
   content: "\f082";
   font-size: 22px;
@@ -133,14 +133,14 @@
   font-size: 22px;
   color: #00acee;
 
-}
+} */
 .discord-img img {
   width: 22px;
-  margin-bottom: -2px;
+  margin-bottom: -4px;
 }
-.socialicon-user .fa{
+/* .socialicon-user .fa{
   padding-right: 3px;
-}
+} */
 a{
   color: blue;
 }
@@ -221,4 +221,29 @@ i.fa.fa-bars.scrollable {
   color: #fff;
   margin-top: 17px;
   font-size: 28px;
+}
+.de_tab .de_nav {
+  overflow: hidden;
+  padding-left: 0;
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.de_tab.tab_methods .de_nav li {
+  background: none;
+  display: inline-block;
+  float: none;
+  margin: 0 10px 0 0;
+}
+.de_countdown, .container-timeline ul li::before, .de_tab.tab_methods .de_nav li.active span {
+  border-color: var(--secondary-color);
+}
+.de_tab.tab_methods .de_nav li span i {
+  display: block;
+  font-size: 30px;
+  margin-bottom: 10px;
 }
