--- a/src/App.css
+++ b/src/App.css
@@ -264,3 +264,52 @@ i.fa.fa-bars.scrollable {
 .react-confirm-alert-body h1 {
   font-size: 35px;
 }
+@media(min-width:990px){
+  .bp3-dialog.create-popup {
+      width: 50%;
+  }
+  .bp3-dialog.create-popup .bp3-dialog-header {
+      box-shadow: none;
+      padding-top: 22px;
+  }.bp3-dialog.create-popup .bp3-dialog-header h4 {
+      font-size: 25px;
+      text-align: center;
+      font-weight:500;
+  }
+  .create-img {
+      width: 470px;
+      height: 380px;
+  }
+  .modal-content.create-popup .modal-header {
+    border-bottom: none;
+}
+  }
+  .sale-icon{
+    display: flex;
+    margin: auto;
+    height: 100px;
+    width: 100px;
+  }
+  .modal-content.create-popup .modal-header h5 {
+    text-align: center;
+    font-size: 25px;
+    margin-top: 17px;
+    font-weight: 500;
+}
+.modal-content.create-popup .modal-body p {
+  text-align: center;
+  margin-top: -18px;
+  font-size: 15px;
+}
+.modal-content.create-popup .modal-body h5 {
+  margin: 25px 0;
+}
+.modal-content.create-popup .modal-body input.fill {
+  width: 85%;
+  height: 40px;
+  margin: 10px;
+  border-radius: 10px;
+}
+.modal-content.create-popup .modal-body label {
+  font-size: 21px;
+} 
